--- a/labs/lab1/misha/c++/CMakeLists.txt
+++ b/labs/lab1/misha/c++/CMakeLists.txt
@@ -1,10 +1,23 @@
 cmake_minimum_required(VERSION 3.15)
 
 
-add_executable(lab1_task1 task1.cpp
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} \
+    -Ofast \
+    -march=native \
+    -flto \
+    -funroll-loops \
+    -ftree-vectorize \
+    -ffast-math \
+    -pipe \
+    -DNDEBUG"
 )
-add_executable(lab1_task2 task2.cpp)
+
+find_package(OpenMP REQUIRED)
+
+add_executable(lab1_task1 task1.cpp)
 
 target_include_directories(lab1_task1 PRIVATE "C:/cygwin64/usr/include/gsl")
 
+
 target_link_libraries(lab1_task1 PRIVATE gsl gslcblas)
+
