--- a/labs/lab1/misha/c++/CMakeLists.txt
+++ b/labs/lab1/misha/c++/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 
 
+set(PATH_LIB "C:/cygwin64/usr/include/gsl")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} \
     -Ofast \
     -march=native \
@@ -12,12 +13,12 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} \
     -DNDEBUG"
 )
 
-find_package(OpenMP REQUIRED)
-
 add_executable(lab1_task1 task1.cpp)
+add_executable(lab1_task2 task2.cpp)
 
-target_include_directories(lab1_task1 PRIVATE "C:/cygwin64/usr/include/gsl")
-
+target_include_directories(lab1_task1 PRIVATE ${PATH_LIB})
+target_include_directories(lab1_task2 PRIVATE ${PATH_LIB})
 
 target_link_libraries(lab1_task1 PRIVATE gsl gslcblas)
+target_link_libraries(lab1_task2 PRIVATE gsl gslcblas)
 
