--- a/labs/lab1/misha/src/CMakeLists.txt
+++ b/labs/lab1/misha/src/CMakeLists.txt
@@ -1,51 +1,35 @@
 cmake_minimum_required(VERSION 3.15)
 
 
-set(PATH_GSL_INCLUDE "C:/Cygwin/usr/include/gsl")
+set(PATH_GSL_INCLUDE "C:/cygwin64/usr/include/gsl")
+set(PATH_BOOST_INCLUDE "C:/cygwin64/usr/include/boost")
 
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} \
-    -Ofast \
-    -march=native \
-    -flto \
-    -funroll-loops \
-    -ftree-vectorize \
-    -ffast-math \
-    -pipe \
-    -DNDEBUG"
-)
+#set(CMAKE_CXX_FLAGS_DEBUG  "${CMAKE_CXX_FLAGS_RELEASE} \
+#    -Ofast \
+#    -march=native \
+#    -flto \
+#    -funroll-loops \
+#    -ftree-vectorize \
+#    -ffast-math\
+#"
+#)
 
-add_executable(lab1_task1 task1.cpp)
-add_executable(lab1_task2 task2.cpp)
+#set (CMAKE_C_FLAGS_DEBUG  "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+#set (CMAKE_CXX_FLAGS_DEBUG  "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+#set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 
-target_include_directories(lab1_task1 PRIVATE ${PATH_GSL_INCLUDE})
-target_include_directories(lab1_task2 PRIVATE ${PATH_GSL_INCLUDE})
+#add_executable(lab1_task1 task1.cpp)
+#add_executable(lab1_task2 task2.cpp)
+#
+#target_include_directories(lab1_task1 PRIVATE ${PATH_GSL_INCLUDE})
+#target_include_directories(lab1_task2 PRIVATE ${PATH_GSL_INCLUDE})
+#
+#target_link_libraries(lab1_task1 PRIVATE gsl gslcblas)
+#target_link_libraries(lab1_task2 PRIVATE gsl gslcblas)
 
-target_link_libraries(lab1_task1 PRIVATE gsl gslcblas)
-target_link_libraries(lab1_task2 PRIVATE gsl gslcblas)
+#find_package(OpenMP REQUIRED)
 
-
-find_package(OpenMP)
-
-set(SUNDIALS_INCLUDE_DIR "/usr/include" CACHE PATH "Location of SUNDIALS header files")
-set(SUNDIALS_LIBRARY_DIR "/usr/lib" CACHE PATH "Location of SUNDIALS libraries")
-
-find_library(SUNDIALS_SOLVER_LIB
-        sundials_cvode
-        PATHS ${SUNDIALS_LIBRARY_DIR}
-        DOC "CVODE library")
-find_library(SUNDIALS_NVEC_LIB
-        sundials_nvecserial
-        PATHS ${SUNDIALS_LIBRARY_DIR}
-        DOC "NVECTOR_SERIAL library")
-
-if (NOT SUNDIALS_SOLVER_LIB OR NOT SUNDIALS_NVEC_LIB)
-    message(FATAL_ERROR "SUNDIALS libraries not found! Check SUNDIALS_LIBRARY_DIR.")
-endif()
-
-add_executable(lab1_sundials task1-sundials.cpp)
-
-target_include_directories(lab1_sundials PRIVATE ${SUNDIALS_INCLUDE_DIR})
-
-target_link_libraries(lab1_sundials PRIVATE ${SUNDIALS_SOLVER_LIB} ${SUNDIALS_NVEC_LIB})
-target_link_libraries(lab1_sundials PUBLIC OpenMP::OpenMP_CXX)
-
+find_package(Boost REQUIRED)
+add_executable(lab1_task1_boost task1-boost.cpp)
+target_include_directories(lab1_task1_boost PRIVATE ${PATH_BOOST_INCLUDE})
+#target_link_libraries(lab1_task1_boost PRIVATE OpenMP::OpenMP_CXX)
