Почему он прибавляет к r2

--- a/labs/lab1/misha/src/CMakeLists.txt
+++ b/labs/lab1/misha/src/CMakeLists.txt
@@ -27,9 +27,12 @@ set(PATH_BOOST_INCLUDE "C:/cygwin64/usr/include/boost")
 #target_link_libraries(lab1_task1 PRIVATE gsl gslcblas)
 #target_link_libraries(lab1_task2 PRIVATE gsl gslcblas)
 
-#find_package(OpenMP REQUIRED)
+find_package(OpenMP REQUIRED)
 
 find_package(Boost REQUIRED)
-add_executable(lab1_task1_boost task1-boost.cpp)
-target_include_directories(lab1_task1_boost PRIVATE ${PATH_BOOST_INCLUDE})
-#target_link_libraries(lab1_task1_boost PRIVATE OpenMP::OpenMP_CXX)
+add_executable(lab1_task1 task1.cpp)
+target_include_directories(lab1_task1 PRIVATE ${PATH_BOOST_INCLUDE})
+
+add_executable(lab1_task2 task2.cpp)
+target_include_directories(lab1_task2 PRIVATE ${PATH_BOOST_INCLUDE})
+target_link_libraries(lab1_task2 PRIVATE OpenMP::OpenMP_CXX)
