--- a/labs/lab1/misha/src/CMakeLists.txt
+++ b/labs/lab1/misha/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 
 
-set(PATH_GSL_INCLUDE "C:/cygwin64/usr/include/gsl")
-set(PATH_BOOST_INCLUDE "C:/cygwin64/usr/include/boost")
+set(PATH_GSL_INCLUDE "C:/Cygwin/usr/include/gsl")
+set(PATH_BOOST_INCLUDE "C:/Cygwin/usr/include/boost")
 
 #set(CMAKE_CXX_FLAGS_DEBUG  "${CMAKE_CXX_FLAGS_RELEASE} \
 #    -Ofast \
@@ -29,7 +29,7 @@ set(PATH_BOOST_INCLUDE "C:/cygwin64/usr/include/boost")
 
 find_package(OpenMP REQUIRED)
 
-find_package(Boost REQUIRED)
+#find_package(Boost REQUIRED)
 add_executable(lab1_task1 task1.cpp)
 target_include_directories(lab1_task1 PRIVATE ${PATH_BOOST_INCLUDE})
 
