--- a/labs/lab1/alia/src/CMakeLists.txt
+++ b/labs/lab1/alia/src/CMakeLists.txt
@@ -4,3 +4,6 @@ set(PATH_BOOST_INCLUDE "C:/cygwin64/usr/include/boost")
 
 add_executable(lab1_task1_sun task1.cpp)
 target_include_directories(lab1_task1_sun PRIVATE ${PATH_BOOST_INCLUDE})
+
+add_executable(lab1_task2_sun task2.cpp)
+target_include_directories(lab1_task2_sun PRIVATE ${PATH_BOOST_INCLUDE})
