--- a/labs/lab3/misha/src/CMakeLists.txt
+++ b/labs/lab3/misha/src/CMakeLists.txt
@@ -10,3 +10,14 @@ target_compile_options(lab3_misha
             -fomit-frame-pointer 
             -pipe
         )
+
+add_executable(lab3_misha_v2 main_er.cpp)
+target_compile_options(lab3_misha_v2
+        PRIVATE
+        -O3
+        -march=native
+        -funroll-loops
+        -flto
+        -fomit-frame-pointer
+        -pipe
+)
