--- a/labs/lab3/misha/src/CMakeLists.txt
+++ b/labs/lab3/misha/src/CMakeLists.txt
@@ -1,2 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 
+file(GLOB SRCS *.cpp)
+
+add_library(
+        lab3_misha_lib
+        STATIC
+        ${SRCS}
+)
