--- a/labs/lab3/misha/src/CMakeLists.txt
+++ b/labs/lab3/misha/src/CMakeLists.txt
@@ -1,9 +1,3 @@
 cmake_minimum_required(VERSION 3.15)
 
-file(GLOB SRCS *.cpp)
-
-add_library(
-        lab3_misha_lib
-        STATIC
-        ${SRCS}
-)
+add_executable(lab3_misha main.cpp)
