--- a/labs/lab3/misha/src/CMakeLists.txt
+++ b/labs/lab3/misha/src/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.15)
 
-add_executable(lab3_misha main.cpp)
+add_executable(lab3_misha main_v2.cpp)
+target_compile_options(lab3_misha_v2 PRIVATE -O3)
