--- a/labs/lab3/misha/src/CMakeLists.txt
+++ b/labs/lab3/misha/src/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 
-add_executable(lab3_misha main_v2.cpp)
+add_executable(lab3_misha main_sol.c)
 target_compile_options(lab3_misha PRIVATE -O3)
+add_library(lab3_misha_lib SHARED main_lib.c)
+target_compile_options(lab3_misha_lib PRIVATE -O3)
