Осталось показать только 3х солитонное решение. Покажу чужое решение.

--- a/labs/lab3/misha/src/CMakeLists.txt
+++ b/labs/lab3/misha/src/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 
-add_executable(lab3_misha main_sol.c)
-target_compile_options(lab3_misha PRIVATE -O3)
+add_executable(lab3_misha_c main_sol.c)
+target_compile_options(lab3_misha_c PRIVATE -O3)
 
-add_library(lab3_misha_lib SHARED main_lib.c)
-set_target_properties(lab3_misha_lib PROPERTIES COMPILE_FLAGS "-fPIC")
-set_target_properties(lab3_misha_lib PROPERTIES OUTPUT_NAME "lab3")
+add_executable(lab3_misha_cpp main_sol.cpp)
+target_compile_options(lab3_misha_cpp PRIVATE -O3)
